make web app responsive

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -22,3 +22,18 @@ header a {
 .nav :where(a, button) {
 	margin-left: 0.625rem;
 }
+
+@media (max-width: 500px) {
+	.app-title {
+		font-size: 1.5rem;
+	}
+
+	.nav :where(span) {
+		font-size: 0.75rem;
+		margin-left: 0;
+	}
+
+	.nav > :nth-child(1) {
+		text-align: right;
+	}
+}
