--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -3,3 +3,14 @@
 	grid-template-columns: 3fr 1fr;
 	gap: 6.25rem;
 }
+
+@media (max-width: 800px) {
+	.home {
+		grid-template-columns: 1fr;
+		gap: 4rem;
+	}
+
+	.notes {
+		order: 2;
+	}
+}
